--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,30 +8,24 @@
         href="{{ url_for('static', filename='style.css') }}" />
 </head>
 
-<body class="container">
+<body>
     <header>
-        <hav>
-
-        </hav>
+        {% include 'header.html' %}
     </header>
-    <span class="horizontal">
-        <h1 id="title">
-            {{ svg }}
-            Socks Chat: {{ room }}
-        </h1>
-        <a href="/" class="generic-button" onclick="leave_room();">Leave
-            this
-            room</a>
-    </span>
-    <div>
-        <form method="POST">
-            {{ form.hidden_tag() }}
-            {{ form.name.label }}: {{ form.name() }}
-            {% for error in form.name.errors %}{{ error }}{% endfor %}<br />
-            {{ form.room.label }}: {{ form.room() }}
-            {% for error in form.room.errors %}{{ error }}{% endfor %}<br /><br />
-            {{ form.submit(class_="generic-button") }}
-        </form>
+    <div class="container">
+        <div class="form-container">
+            <h2>Log into Socks</h2>
+            <form method="POST">
+                {{ form.hidden_tag() }}
+                {{ form.name.label }}: {{ form.name() }}
+                {% for error in form.name.errors %}{{ error }}{% endfor %}<br />
+                {{ form.room.label }}: {{ form.room() }}
+                {% for error in form.room.errors %}{{ error }}{% endfor %}<br /><br />
+                <span class="right-align">
+                    {{ form.submit(class_="generic-button") }}
+                </span>
+            </form>
+        </div>
     </div>
 </body>
 
