--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -54,7 +54,7 @@
                 let message = document.createElement("span");
                 let time = document.createElement("i");
                 let typing = document.getElementById('typing');
-                typing.style.display = "none";
+                typing.style.opacity = 0;
                 time.innerHTML = new Date()
                     .toLocaleTimeString();
                 // Render markdown and add URLs where necessary
