Fixed 'typing' bug. Changed to single quotes for consistency

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -28,7 +28,7 @@
         $(document).ready(function () {
             // Instead of hard coded value, pull from site
             const protocol = window.location.toString().includes(
-                "localhost") ? 'http://' : 'https://'
+                'localhost') ? 'http://' : 'https://'
             socket = io.connect(
                 `${protocol}${document.domain}:${location.port}/chat`
             );
@@ -36,9 +36,9 @@
                 socket.emit('joined', {});
             });
             socket.on('status', function (data) {
-                let chat = document.getElementById("chat");
-                let message = document.createElement("span");
-                let time = document.createElement("i");
+                let chat = document.getElementById('chat');
+                let message = document.createElement('span');
+                let time = document.createElement('i');
                 time.innerHTML = new Date()
                     .toLocaleTimeString();
                 chat.appendChild(time);
@@ -50,11 +50,13 @@
             });
             socket.on('message', function (data) {
                 var md = window.markdownit();
-                let chat = document.getElementById("chat");
-                let message = document.createElement("span");
-                let time = document.createElement("i");
+                let chat = document.getElementById('chat');
+                let message = document.createElement('span');
+                let time = document.createElement('i');
                 let typing = document.getElementById('typing');
-                typing.style.opacity = 0;
+                if (socket.id !== data.id) {
+                    typing.style.opacity = 0;
+                }
                 time.innerHTML = new Date()
                     .toLocaleTimeString();
                 // Render markdown and add URLs where necessary
@@ -62,7 +64,7 @@
                     `${data.name}:\n ${data.msg}`));
                 let links = message.getElementsByTagName('a');
                 for (var i = 0; i < links.length; i++) {
-                    links[i].target = "_blank";
+                    links[i].target = '_blank';
                 }
                 // Add syntax highlighting to code blocks
                 message.querySelectorAll('pre code').forEach((
@@ -79,16 +81,16 @@
                 $('#chat').scrollTop($('#chat')[0]
                     .scrollHeight);
 
-                if (!vis() && !document.title.includes("(1)")) {
+                if (!vis() && !document.title.includes('(1)')) {
                     document.title = `(1) ${document.title}`
                 }
             });
             let typing_timestamp = 0;
             socket.on('user_typing', function (data) {
-                typing_timestamp = Date.now() + 4000
                 let typing = document.getElementById('typing');
-                typing.classList.remove('hidden');
                 if (socket.id !== data.id) {
+                    typing_timestamp = Date.now() + 4000
+                    typing.classList.remove('hidden');
                     typing.innerText = `${data.name} is typing`;
                     typing.style.opacity = 1;
                     setTimeout(function () {
@@ -97,7 +99,7 @@
                             typing.classList.add(
                                 'hidden');
                         }
-                    }, 4500);
+                    }, 5000);
                 }
             });
 
@@ -108,9 +110,9 @@
                     return sendMessage();
                 }
                 if (code === 13 && e.shiftKey) {
-                    document.getElementById("text")
+                    document.getElementById('text')
                         .value = document
-                        .getElementById("text")
+                        .getElementById('text')
                         .value
                 }
             });
@@ -125,8 +127,8 @@
             socket.emit('text', {
                 msg: text
             });
-            const textarea = document.getElementById("text");
-            textarea.value = "";
+            const textarea = document.getElementById('text');
+            textarea.value = '';
             textarea.style.cssText = 'height:18px';
             return false;
         }
@@ -136,7 +138,7 @@
                 socket.disconnect();
                 // go back to the login page
                 window.location.href =
-                    "{{ url_for('main.index') }}";
+                    '{{ url_for("main.index") }}';
             });
         }
 
@@ -155,10 +157,10 @@
 
         var vis = (function () {
             var stateKey, eventKey, keys = {
-                hidden: "visibilitychange",
-                webkitHidden: "webkitvisibilitychange",
-                mozHidden: "mozvisibilitychange",
-                msHidden: "msvisibilitychange"
+                hidden: 'visibilitychange',
+                webkitHidden: 'webkitvisibilitychange',
+                mozHidden: 'mozvisibilitychange',
+                msHidden: 'msvisibilitychange'
             };
             for (stateKey in keys) {
                 if (stateKey in document) {
