Switching all double quotes to single quotes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
 </body>
 
 <script type="text/javascript" charset="utf-8">
-    document.onload = document.getElementById("year").innerText = new Date()
+    document.onload = document.getElementById('year').innerText = new Date()
         .getFullYear();
 </script>
 
