--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -137,8 +137,8 @@
             socket.emit('left', {}, function () {
                 socket.disconnect();
                 // go back to the login page
-                window.location.href =
-                    '{{ url_for("main.index") }}';
+                // window.location.href =
+                //     '{{ url_for("main.index") }}';
             });
         }
 
@@ -208,7 +208,8 @@
             <h1 id="title">
                 {{ room }}
             </h1>
-            <a href="/" class="generic-button" onclick="leave_room();">
+            <a href="{{ url_for('main.logout') }}" class="generic-button"
+                onclick="leave_room();">
                 Leave this room
             </a>
         </span>
